---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: ????
  Info:
    - Commence the left gui phase
    - Badly recreate the logistic section row
    - Slightly better frame
    - Scroll pane
    - Get close enough
    - Cleanup styles
    - Populate the list with actual factories
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2025. 06. 04
  Info:
    - Change how the debug output is shown
    - Handle machines and modules with quality
    - The items/m button can move/hide, detect that
    - Better detect quality from the sprite button
    - Store power and pollution in the factory table
    - Grab the district's space location
    - Fix missing argument for recipe blocked messages
    - Fix crash when there was no pollution
    - Block recipes that need or make spoiling items
    - Finish the factory planner stage
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2025. 03. 15
  Info:
    - Grab the products, byproducts & ingredients
    - Default serpent to sort keys
    - Validate timescale/rate
    - Check if all products are 100% satisfied
    - Micro
    - Grab the power and pollution
    - Fix sortKeys typo
    - Extract the recipe and machine from the table
    - Blacklist rockets, drills & offshore pumps
    - Sum all the entities and modules
    - Do round up the buildings
    - Move quality to the back
    - Rearrange code
    - Check for beacons
    - Ensure the player is on the 1st floor
    - Require all subfloors to be visible
    - Power pollution comment
    - Get the power and pollution as their true number
    - Check if a recipe is available
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2025. 03. 07
  Info:
    - Add the magic hut button next to products